--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=database-1.cmfhxeb4ax1d.us-east-1.rds.amazonaws.com/restapi
+spring.datasource.username=admin
+spring.datasource.password=Tacosisi
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
