--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=database-1.cmfhxeb4ax1d.us-east-1.rds.amazonaws.com/restapi
+spring.datasource.url=jdbc:mysql://18.205.69.32:3306/Pathways
 spring.datasource.username=admin
 spring.datasource.password=Tacosisi
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql: true
+
+spring.jpa.database=MYSQL
