added PathwayImpl.java file and edited Initializer.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:mysql://18.205.69.32:3306/Pathways
 spring.datasource.username=admin
 spring.datasource.password=Tacosisi
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.database=MYSQL
